--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,13 @@ flask==2.0.1
 werkzeug==2.0.3
 mediapipe==0.10.21
 numpy==1.24.3
-opencv-python==4.8.0.76
-librosa==0.10.1
+opencv-python==4.8.0.74
+ultralytics==8.0.196
+librosa==0.11.0
+pydub==0.25.1
 python-dotenv==1.0.0
 flask-cors==4.0.0
-ultralytics==8.1.2 
+scipy==1.15.2
+soundfile==0.13.1
+numba==0.61.2
+scikit-learn==1.6.1 
